[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/actors/_player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/ActorData/ActorData.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/PhysicsData/PhysicsData.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/Controller/PlayerKeyboardController.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/AffectedByGravity/AffectedByGravity.tscn" type="PackedScene" id=6]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 35, 35 )

[node name="Controller" parent="." instance=ExtResource( 5 )]

[node name="AffectedByGravity" parent="." instance=ExtResource( 6 )]

[node name="PhysicsData" parent="." instance=ExtResource( 4 )]

[node name="ActorData" parent="." instance=ExtResource( 2 )]
coordinates = Vector2( 14, 4 )
display_name = "Player"
